<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    tools:context=".violationlist">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_background"
        style="@style/HEADER">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="14dp"
            android:text="List of Violations"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="53dp"
        style="@style/SCREEN">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_back_white"
            style="@style/BGSETTING"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="1dp"
                android:text="@string/Violation"
                style="@style/ListText"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:padding="1dp"
                android:text="@string/Description"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:padding="1dp"
                android:text="@string/Violation2"
                android:textStyle="bold"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:padding="1dp"
                android:text="@string/Description2"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:padding="1dp"
                android:text="@string/Violation3"
                android:textStyle="bold"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:padding="1dp"
                android:text="@string/Description3"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:padding="1dp"
                android:text="@string/Violation4"
                android:textStyle="bold"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:padding="1dp"
                android:text="@string/Description4"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:padding="1dp"
                android:text="@string/Violation5"
                android:textStyle="bold"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:padding="1dp"
                android:text="@string/Description5"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:padding="1dp"
                android:text="@string/Violation6"
                android:textStyle="bold"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:padding="1dp"
                android:text="@string/Description6"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:padding="1dp"
                android:text="@string/Violation7"
                android:textStyle="bold"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:padding="1dp"
                android:text="@string/Description7"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:padding="1dp"
                android:text="@string/Violation8"
                android:textStyle="bold"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:padding="1dp"
                android:text="@string/Description8"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:padding="1dp"
                android:text="@string/Violation9"
                android:textStyle="bold"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:padding="1dp"
                android:text="@string/Description9"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:padding="1dp"
                android:text="@string/Violation10"
                android:textStyle="bold"
                style="@style/ListText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:padding="1dp"
                android:text="@string/Description10"
                style="@style/ListText"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>